# ie251-manufacturing-process

./: .gitignore  README.md
docker/: Dockerfile  docker-compose.yml  install-zsh.sh
src/pathfinding_system/: CMakeLists.txt  package.xml  setup.py
src/pathfinding_system/action/: FollowPath.action  MoveToNode.action
src/pathfinding_system/config/: graph.yaml  params.yaml
src/pathfinding_system/launch/: gazebo_world.launch  simulation.launch  system.launch
src/pathfinding_system/msg/: RobotState.msg
src/pathfinding_system/scripts/: path_server_node  robot_executor_node  unpause_gazebo_node  user_client
src/pathfinding_system/src/pathfinding_system/client/: user_client.py
src/pathfinding_system/src/pathfinding_system/planning/: path.py  path_planner.py  path_server.py
src/pathfinding_system/src/pathfinding_system/robot/: motion.py  motion_controller.py  path_follower.py  robot_state.py  robot_status.py  turtlebot.py  turtlebot_executer.py  turtlebot_node.py
src/pathfinding_system/src/pathfinding_system/safety/: collision_monitor.py  linear_predictor.py
src/pathfinding_system/src/pathfinding_system/simulation/: __init__.py  gazebo_control.py
src/pathfinding_system/src/pathfinding_system/world/: edge.py  graph.py  node.py
src/pathfinding_system/test/: test_gazebo_control.py  test_launch_split.py  test_motion.py  test_path_server.py  test_turtlebot.py  test_turtlebot_node.py
src/pathfinding_system/worlds/: pathfinding_table.world
src/tb3_graph_nav/: CMakeLists.txt  package.xml  setup.py
src/tb3_graph_nav/action/: NavigateToNode.action
src/tb3_graph_nav/config/: graph.yaml
src/tb3_graph_nav/launch/: graph_nav.launch  simulation.launch
src/tb3_graph_nav/msg/: NodeStatus.msg
src/tb3_graph_nav/scripts/: nav_server.py  position_reporter.py  test_navigate.py
src/tb3_graph_nav/src/tb3_graph_nav/: go_to_goal.py  graph.py  planner.py
src/tb3_graph_nav/tests/: test_graph.py  test_planner.py
src/tb3_graph_nav/worlds/: table.world
