<?xml version="1.0"?>
<package format="2">
  <name>tb3_graph_nav</name>
  <version>0.1.0</version>
  <description>Graph-based waypoint navigation for TurtleBot3 Waffle on a 6m x 3m workspace</description>
  <maintainer email="user@kaist.ac.kr">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf</depend>

  <exec_depend>python3-yaml</exec_depend>
  <test_depend>python3-pytest</test_depend>
</package>
